[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qumara"
version = "0.1.0"
description = "Intent-Aware Multi-Agent Reinforcement Learning Framework for Adaptive Post-Quantum Authentication Orchestration in Cloud-Native Microservice Networks"
authors = [
    {name = "QuMARA Contributors", email = "maintainers@qumara.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
    "Topic :: Security",
]

[project.urls]
"Homepage" = "https://github.com/Karthi123k/Qumara1"
"Documentation" = "https://github.com/Karthi123k/Qumara1/wiki"
"Source" = "https://github.com/Karthi123k/Qumara1"
"Issues" = "https://github.com/Karthi123k/Qumara1/issues"

[tool.setuptools]
packages = ["qumara"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=qumara --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["qumara"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
